Don't show download button for HLS streams

Downloading the m3u8 file isn't useful to user.

BUG=654507

Review-Url: https://codereview.chromium.org/2400293003
Cr-Commit-Position: refs/heads/master@{#424291}

Former-commit-id: e43859889b1cac0f6ba7d1855cb8e7753c8f89ba